[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/map.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/generate_button.gd" type="Script" id=2]
[ext_resource path="res://Scenes/continent.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/map_mode_group.tres" type="ButtonGroup" id=4]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=5]
[ext_resource path="res://UI/map_size_buttongroup.tres" type="ButtonGroup" id=6]
[ext_resource path="res://Sprites/cursor.png" type="Texture" id=7]
[ext_resource path="res://Scripts/cursor.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Node_info.gd" type="Script" id=9]

[node name="Main" type="Node2D"]
script = ExtResource( 5 )

[node name="Map" parent="." instance=ExtResource( 1 )]
position = Vector2( 104, 0 )
continent = ExtResource( 3 )

[node name="UI_container" type="VBoxContainer" parent="."]
margin_right = 101.0
margin_bottom = 446.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="map_size_label" type="Label" parent="UI_container"]
margin_right = 101.0
margin_bottom = 14.0
text = "Map Size"

[node name="small_size_button" type="Button" parent="UI_container"]
margin_top = 18.0
margin_right = 101.0
margin_bottom = 38.0
toggle_mode = true
group = ExtResource( 6 )
text = "Small"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="medium_size_button" type="Button" parent="UI_container"]
margin_top = 42.0
margin_right = 101.0
margin_bottom = 62.0
toggle_mode = true
pressed = true
group = ExtResource( 6 )
text = "Medium"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="large_size_button" type="Button" parent="UI_container"]
margin_top = 66.0
margin_right = 101.0
margin_bottom = 86.0
toggle_mode = true
group = ExtResource( 6 )
text = "Large"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continents_label" type="Label" parent="UI_container"]
margin_top = 90.0
margin_right = 101.0
margin_bottom = 104.0
text = "Continents"

[node name="continents_box" type="SpinBox" parent="UI_container"]
margin_top = 108.0
margin_right = 101.0
margin_bottom = 132.0
min_value = 2.0
value = 12.0

[node name="generate_button" type="Button" parent="UI_container"]
margin_top = 136.0
margin_right = 101.0
margin_bottom = 156.0
text = "Generate"
script = ExtResource( 2 )

[node name="smooth_button" type="Button" parent="UI_container"]
margin_top = 160.0
margin_right = 101.0
margin_bottom = 180.0
text = "Erosion"
script = ExtResource( 2 )

[node name="smooth_ele_button" type="Button" parent="UI_container"]
margin_top = 184.0
margin_right = 101.0
margin_bottom = 204.0
text = "Smooth"
script = ExtResource( 2 )

[node name="water_erosion_button" type="Button" parent="UI_container"]
margin_top = 208.0
margin_right = 101.0
margin_bottom = 228.0
text = "Water Erosion"
script = ExtResource( 2 )

[node name="HSeparator2" type="HSeparator" parent="UI_container"]
margin_top = 232.0
margin_right = 101.0
margin_bottom = 236.0

[node name="settings_label" type="Label" parent="UI_container"]
margin_top = 240.0
margin_right = 101.0
margin_bottom = 254.0
text = "Settings"

[node name="Sea_level_label" type="Label" parent="UI_container"]
margin_top = 258.0
margin_right = 101.0
margin_bottom = 272.0
text = "Sea Level"

[node name="sea_level_box" type="SpinBox" parent="UI_container"]
margin_top = 276.0
margin_right = 101.0
margin_bottom = 300.0
min_value = 2.0
value = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="apply_settings_button" type="Button" parent="UI_container"]
margin_top = 304.0
margin_right = 101.0
margin_bottom = 324.0
toggle_mode = true
group = ExtResource( 4 )
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="UI_container"]
margin_top = 328.0
margin_right = 101.0
margin_bottom = 332.0

[node name="modes_label" type="Label" parent="UI_container"]
margin_top = 336.0
margin_right = 101.0
margin_bottom = 350.0
text = "Map Modes"

[node name="Continent_mode_button" type="Button" parent="UI_container"]
margin_top = 354.0
margin_right = 101.0
margin_bottom = 374.0
toggle_mode = true
pressed = true
group = ExtResource( 4 )
text = "Continent"

[node name="Conflict_mode_button" type="Button" parent="UI_container"]
margin_top = 378.0
margin_right = 101.0
margin_bottom = 398.0
toggle_mode = true
group = ExtResource( 4 )
text = "Conflict"

[node name="Elevation_mode_button" type="Button" parent="UI_container"]
margin_top = 402.0
margin_right = 101.0
margin_bottom = 422.0
toggle_mode = true
group = ExtResource( 4 )
text = "Elevation"

[node name="Sea_mode_button" type="Button" parent="UI_container"]
margin_top = 426.0
margin_right = 101.0
margin_bottom = 446.0
toggle_mode = true
group = ExtResource( 4 )
text = "Sea"

[node name="cursor" type="Sprite" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 346, 314 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Camera2D" type="Camera2D" parent="cursor"]

[node name="Node_info" type="VBoxContainer" parent="."]
margin_left = 2.00259
margin_top = 526.755
margin_right = 65.0026
margin_bottom = 594.755
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="node_info_label" type="Label" parent="Node_info"]
margin_right = 63.0
margin_bottom = 14.0
text = "Node Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nodeheight" type="HBoxContainer" parent="Node_info"]
margin_top = 18.0
margin_right = 63.0
margin_bottom = 32.0

[node name="height_label" type="Label" parent="Node_info/nodeheight"]
margin_right = 46.0
margin_bottom = 14.0
text = "Height:"

[node name="height_number" type="Label" parent="Node_info/nodeheight"]
margin_left = 50.0
margin_right = 58.0
margin_bottom = 14.0
text = "0"

[node name="nodeX" type="HBoxContainer" parent="Node_info"]
margin_top = 36.0
margin_right = 63.0
margin_bottom = 50.0

[node name="x_label" type="Label" parent="Node_info/nodeX"]
margin_right = 12.0
margin_bottom = 14.0
text = "X:"

[node name="x_number" type="Label" parent="Node_info/nodeX"]
margin_left = 16.0
margin_right = 24.0
margin_bottom = 14.0
text = "0"

[node name="nodeY" type="HBoxContainer" parent="Node_info"]
margin_top = 54.0
margin_right = 63.0
margin_bottom = 68.0

[node name="y_label" type="Label" parent="Node_info/nodeY"]
margin_right = 11.0
margin_bottom = 14.0
text = "Y:"

[node name="y_number" type="Label" parent="Node_info/nodeY"]
margin_left = 15.0
margin_right = 23.0
margin_bottom = 14.0
text = "0"
[connection signal="map_generated" from="Map" to="cursor" method="_on_Map_map_generated"]
[connection signal="map_generated" from="Map" to="UI_container/generate_button" method="_on_Map_map_generated"]
[connection signal="pressed" from="UI_container/small_size_button" to="Map" method="_on_size_button_pressed" binds= [ "small" ]]
[connection signal="pressed" from="UI_container/medium_size_button" to="Map" method="_on_size_button_pressed" binds= [ "medium" ]]
[connection signal="pressed" from="UI_container/large_size_button" to="Map" method="_on_size_button_pressed" binds= [ "large" ]]
[connection signal="pressed" from="UI_container/generate_button" to="Map" method="_on_generate_button_pressed"]
[connection signal="pressed" from="UI_container/smooth_button" to="Map" method="_on_smooth_button_pressed"]
[connection signal="pressed" from="UI_container/smooth_ele_button" to="Map" method="_on_smooth_ele_button_pressed"]
[connection signal="pressed" from="UI_container/water_erosion_button" to="Map" method="_on_water_erosion_button_pressed"]
[connection signal="pressed" from="UI_container/apply_settings_button" to="Map" method="_on_apply_settings_button_pressed"]
[connection signal="pressed" from="UI_container/Continent_mode_button" to="Map" method="_on_Continent_mode_button_pressed"]
[connection signal="pressed" from="UI_container/Conflict_mode_button" to="Map" method="_on_Conflict_mode_button_pressed"]
[connection signal="pressed" from="UI_container/Elevation_mode_button" to="Map" method="_on_Elevation_mode_button_pressed"]
[connection signal="pressed" from="UI_container/Sea_mode_button" to="Map" method="_on_Sea_mode_button_pressed"]
[connection signal="node_info" from="cursor" to="Node_info" method="_on_cursor_node_info"]
